# wallpaperslider

./: Cargo.toml  LICENSE  README.md  app.rc  build.rs
src/: main.rs
src/services/: helper.rs  mod.rs  wallpaper_wide.rs  windows_wallpaper.rs
