[package]
name = "wallpaperslides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
regex = "1.9.1"
trayicon = "0.2.0"
winapi = "0.3.9"
winit = "0.30.5"
winreg = "0.52.0"
open = "5.1.4"
rand = "0.8.5"

[build-dependencies]
embed-resource = "2.3"
